<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_background"
    android:clipToPadding="false"
    tools:context=".MainActivity2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/Tesla"
                android:textColor="@color/text_gray"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/Cybertruck"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <!-- my-Buttons -->

        <soup.neumorphism.NeumorphImageView
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:padding="26dp"
            android:src="@drawable/ic_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:neumorph_backgroundColor="@color/new_background"
            app:neumorph_shadowColorDark="@color/new_shadow1"
            app:neumorph_shadowColorLight="@color/new_shadow2"
            app:neumorph_shadowElevation="4dp"
            app:neumorph_shapeType="pressed" />

        <soup.neumorphism.NeumorphImageView
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:padding="26dp"
            android:src="@drawable/ic_range"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:neumorph_backgroundColor="@color/new_background"
            app:neumorph_shadowColorDark="@color/new_shadow1"
            app:neumorph_shadowColorLight="@color/new_shadow2"
            app:neumorph_shadowElevation="4dp"
            app:neumorph_shapeType="pressed" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:src="@drawable/img_tesla2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <!--Neumorph Card view 1-->
            <soup.neumorphism.NeumorphCardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:neumorph_backgroundColor="@color/new_background"
                app:neumorph_shadowColorDark="@color/new_shadow1"
                app:neumorph_shadowColorLight="@color/new_shadow2"
                app:neumorph_shadowElevation="4dp"
                app:neumorph_shapeAppearance="@style/NeumorphismCard"
                app:neumorph_shapeType="basin"
                tools:context=".MainActivity3">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_background">


                    <ImageView
                        android:id="@+id/imgCheeking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:visibility="invisible"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/img_selected" />

                    <TextView
                        android:id="@+id/txtEngine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/Engine"
                        android:textColor="@color/text_white"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/txtSleepingMode"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/txtSleepingMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/sleeping_mode"
                        android:textColor="@color/text_gray"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </soup.neumorphism.NeumorphCardView>

            <!--Neumorph Card view 2-->
            <soup.neumorphism.NeumorphCardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:neumorph_backgroundColor="@color/new_background"
                app:neumorph_shadowColorDark="@color/new_shadow1"
                app:neumorph_shadowColorLight="@color/new_shadow2"
                app:neumorph_shadowElevation="4dp"
                app:neumorph_shapeAppearance="@style/NeumorphismCard"
                app:neumorph_shapeType="basin"
                tools:context=".MainActivity3">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_background">


                    <ImageView
                        android:id="@+id/imgCheeking2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/img_selected" />

                    <TextView
                        android:id="@+id/txtClimate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/climate"
                        android:textColor="@color/text_white"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/txtAC"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/txtAC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/AC_is_ON"
                        android:textColor="@color/text_gray"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </soup.neumorphism.NeumorphCardView>

            <!--Neumorph Card view 3-->
            <soup.neumorphism.NeumorphCardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:neumorph_backgroundColor="@color/new_background"
                app:neumorph_shadowColorDark="@color/new_shadow1"
                app:neumorph_shadowColorLight="@color/new_shadow2"
                app:neumorph_shadowElevation="4dp"
                app:neumorph_shapeAppearance="@style/NeumorphismCard"
                app:neumorph_shapeType="basin"
                tools:context=".MainActivity3">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_background">


                    <ImageView
                        android:id="@+id/imgCheeking3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/img_selected" />

                    <TextView
                        android:id="@+id/txtLowTires"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/Tires"
                        android:textColor="@color/text_white"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/txtLowPressure"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/txtLowPressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/Low_pressure"
                        android:textColor="@color/text_gray"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </soup.neumorphism.NeumorphCardView>

            <!--Neumorph Card view 4-->
            <soup.neumorphism.NeumorphCardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:neumorph_backgroundColor="@color/new_background"
                app:neumorph_shadowColorDark="@color/new_shadow1"
                app:neumorph_shadowColorLight="@color/new_shadow2"
                app:neumorph_shadowElevation="4dp"
                app:neumorph_shapeAppearance="@style/NeumorphismCard"
                app:neumorph_shapeType="basin"
                tools:context=".MainActivity3">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_background">


                    <ImageView
                        android:id="@+id/imgCheeking4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/img_selected" />

                    <TextView
                        android:id="@+id/txtDirection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/txtDirection"
                        android:textColor="@color/text_white"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/txtAutomaticMode"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/txtAutomaticMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/Automatic_Mode"
                        android:textColor="@color/text_gray"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </soup.neumorphism.NeumorphCardView>

        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/Information"
        android:textColor="@color/text_white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/other"
        android:textColor="@color/text_gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <soup.neumorphism.NeumorphImageView
        android:id="@+id/neumorphImageView3"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:padding="26dp"
        android:layout_marginBottom="18dp"
        android:src="@drawable/ic_battery"
        app:layout_constraintEnd_toStartOf="@+id/neumorphImageView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/neumorphImageView4"
        app:neumorph_backgroundColor="@color/new_background"
        app:neumorph_shadowColorDark="@color/new_shadow1"
        app:neumorph_shadowColorLight="@color/new_shadow2"
        app:neumorph_shadowElevation="4dp"
        app:neumorph_shapeAppearance="@style/NeumorphismCard"
        app:neumorph_shapeType="flat" />

    <soup.neumorphism.NeumorphImageView
        android:id="@+id/neumorphImageView4"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:padding="26dp"
        android:layout_marginBottom="18dp"
        android:src="@drawable/ic_dry"
        app:layout_constraintEnd_toStartOf="@+id/neumorphImageView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/neumorphImageView3"
        app:layout_constraintTop_toTopOf="@+id/neumorphImageView5"
        app:neumorph_backgroundColor="@color/new_background"
        app:neumorph_shadowColorDark="@color/new_shadow1"
        app:neumorph_shadowColorLight="@color/new_shadow2"
        app:neumorph_shadowElevation="4dp"
        app:neumorph_shapeAppearance="@style/NeumorphismCard"
        app:neumorph_shapeType="flat" />

    <soup.neumorphism.NeumorphImageView
        android:id="@+id/neumorphImageView5"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:padding="26dp"
        android:tint="@color/blue_light"
        android:layout_marginBottom="18dp"
        android:src="@drawable/ic_range"
        app:layout_constraintEnd_toStartOf="@+id/neumorphImageView7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/neumorphImageView4"
        app:layout_constraintTop_toTopOf="@+id/neumorphImageView7"
        app:neumorph_backgroundColor="@color/new_background"
        app:neumorph_shadowColorDark="@color/new_shadow1"
        app:neumorph_shadowColorLight="@color/new_shadow2"
        app:neumorph_shadowElevation="4dp"
        app:neumorph_shapeAppearance="@style/NeumorphismCard"
        app:neumorph_shapeType="pressed" />

    <soup.neumorphism.NeumorphImageView
        android:id="@+id/neumorphImageView7"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:padding="26dp"
        android:layout_marginBottom="18dp"
        android:src="@drawable/ic_program"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/neumorphImageView5"
        app:neumorph_backgroundColor="@color/new_background"
        app:neumorph_shadowColorDark="@color/new_shadow1"
        app:neumorph_shadowColorLight="@color/new_shadow2"
        app:neumorph_shadowElevation="4dp"
        app:neumorph_shapeAppearance="@style/NeumorphismCard"
        app:neumorph_shapeType="flat" />

</androidx.constraintlayout.widget.ConstraintLayout>